airs\refac(front): #3524 compliance section
- Added compliance section to home page


Former-commit-id: 1b97a73abe9344f74e463df9042ead0e6a87d835

--- a/airs/theme/2020/static/scss/base.scss
+++ b/airs/theme/2020/static/scss/base.scss
@@ -158,6 +158,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .bg-card8 { background-image: url('../../images/resources/card8.png'); height: 200px;}
 .bg-card9 { background-image: url('../../images/resources/card9.png'); height: 200px;}
 .bg-faq { background-image: url('../../images/faq/cover-faq.png'); }
+.bg-compliance { background-image: url('../../images/compliance/cover-compliance.png'); }
 .b-max { font-weight: 999; }
 .nb-6 { margin-bottom: -6rem;}
 .lower-img { &:hover { transform: scale(1.1);
