--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -286,6 +286,28 @@
     </div>
   </div>
 </div>
+<div class="bg-compliance bg-banner-sz coverm cover-s section-height justify-center items-center flex flex-wrap minh-100vh">
+  <div>
+    <h2 class="white center roboto w-100 tc f1-ns f2 lh3 pl3-l ph3 mw7">
+      We can help you comply with the following standards, among others<br>
+    </h2>
+    <img
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/compliance/logo-owasp.png"
+      alt="Logo OWASP">
+    <img
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/compliance/logo-pci-dss.png"
+      alt="Logo Pci DSS">
+    <img
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/compliance/logo-hipaa.png"
+      alt="Logo HIPAA">
+    <img
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/compliance/logo-nist.png"
+      alt="Logo NIST">
+    <img
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/compliance/logo-gdpr.png"
+      alt="Logo GDPR">
+  </div>
+</div>
 <!-- Ebook section -->
 <div class="bg-ebook bg-banner-sz cover bg-center section-height justify-center items-center flex flex-wrap minh-100vh">
   <div>
