airs\refac(front): #3516 new styles in home page
- Added two new titles
- Changed font sizes of all the titles and paragraphs in the home page


Former-commit-id: c6e3f0c0b08dff1a4ba17694eb1fe762b7db8304

--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -73,14 +73,14 @@
   <div class="slideshow-inner w-100 ph4">
     <div class="mySlides fadein">
       <div>
-        <h2 class="white center roboto w-100 tc ph3 f1-l f2 lh-solid mw7">
+        <h2 class="white center roboto w-100 tc ph3 f1 lh-solid mw7">
           Comprehensive Hacking at the Speed of your Business
         </h2>
       </div>
     </div>
     <div class="mySlides fadein dn">
       <div>
-        <h2 class="white center roboto w-100 tc ph3 f1-l f2 lh-solid mw7">
+        <h2 class="white center roboto w-100 tc ph3 f1 lh-solid mw7">
           Effective Automation and Human Intelligence
         </h2>
       </div>
@@ -105,6 +105,9 @@
 </div>
 <div class="mw8 mr-auto ml-auto ph4">
   <div class="w-100">
+    <h2 class="f1 fw6 c-fluid-bk roboto mv4 lh-solid tc">
+      Four elements that help you build and maintain secure IT systems
+    </h2>
     <div class="section-height center justify-center items-center flex flex-wrap">
       <div>
         <div class="w-50-l fr-l tc">
@@ -126,7 +129,7 @@
           <h3 class="c-fluid-bk roboto fw7 f4 mv0 tl-l tc lh-18">
             The Platform Element that Controls the Process to Achieve Remediation
           </h3>
-          <p class="c-fluid-bk roboto fw1 f5 lh-2 tl">
+          <p class="c-fluid-bk roboto fw1 f-key-features lh-2 tl">
             <strong class="b">Integrates</strong> is a platform where vulnerabilities
             are reported, classified and prioritized.
             It also allows you to define their treatments,
@@ -160,7 +163,7 @@
           <h3 class="c-fluid-bk roboto fw7 f4 mv0 tr-l tc lh-18">
             The Automatic Element that Identifies Superficial Vulnerabilities
           </h3>
-          <p class="c-fluid-bk roboto fw1 f5 lh-2 tr-l tl">
+          <p class="c-fluid-bk roboto fw1 f-key-features lh-2 tr-l tl">
             <strong class="b">Skims</strong> is a SAST/SCA tool that searches and
             detects superficial or peripheral vulnerabilities in your IT systems
             at high speed. It can also automatically verify whether
@@ -193,7 +196,7 @@
           <h3 class="c-fluid-bk roboto fw7 f4 mv0 tl-l tc lh-18">
             The Human Element that Continuously Detects Vulnerabilities
           </h3>
-          <p class="c-fluid-bk roboto fw1 f5 lh-2 tl">
+          <p class="c-fluid-bk roboto fw1 f-key-features lh-2 tl">
             <strong class="b">Drills</strong> uses the right combination
             of technology and human intelligence
             to find deep and zero-day vulnerabilities
@@ -227,7 +230,7 @@
           <h3 class="c-fluid-bk roboto fw7 f4 mv0 tr-l tc lh-18">
             The Robot Element that Breaks the Build to Force Remediation
           </h3>
-          <p class="c-fluid-bk roboto fw1 f5 lh-2 tr-l tl">
+          <p class="c-fluid-bk roboto fw1 f-key-features lh-2 tr-l tl">
             <strong class="b">Forces</strong> allows you to implement
             DevSecOps into your project.
             It breaks the build to force the remediation
@@ -239,17 +242,22 @@
         </div>
       </div>
     </div>
+    <h2 class="f1 fw6 c-fluid-bk roboto mv4 tc lh-solid">
+      These four elements, which are part of our Continuous Hacking service,
+      allow your company to achieve high vulnerability remediation rates
+    </h2>
   </div>
 </div>
 <div class="bg-solutions bg-banner-sz coverm cover-s section-height justify-center items-center flex flex-wrap minh-100vh">
   <div class="mw-1366 ph-body center pv0-l pv4">
-    <div class="dib-l width-sols v-top">
-      <h2 class="white roboto f2 fw7 title-sols display-sols mv3">
-        Security Solutions for your Business
+    <div class="w-100 mw8 center">
+      <h2 class="white tc roboto f1 fw7 mv3">
+        Multiple Solutions, One Main Service<br>
+        Continuous Hacking
       </h2>
     </div>
-    <div class="dib-l ph0-l w-auto-l w5 center">
-      <ul class="list roboto f3-ns f4 fw7 dib-l ph4 mv0">
+    <div class="w-auto-l w5 tc center">
+      <ul class="list roboto f3-ns f4 fw7 dib-l ph4 mv0 tl">
         <li class="mb3">
           <a href="{{ SITEURL }}/solutions/devsecops/" class="white solution-link no-underline mt0 mb3 t-all-5">
             DevSecOps
@@ -266,7 +274,7 @@
           </a>
         </li>
       </ul>
-      <ul class="list roboto white f3-ns f4 fw7 dib-l ph4 mv0">
+      <ul class="list roboto white f3-ns f4 fw7 dib-l ph4 mv0 tl">
         <li class="mb3">
           <a href="{{ SITEURL }}/solutions/ethical-hacking/" class="white solution-link no-underline mt0 mb3 nowrap">
             Ethical Hacking
@@ -288,7 +296,7 @@
 </div>
 <div class="bg-compliance bg-banner-sz coverm cover-s section-height justify-center items-center flex flex-wrap minh-100vh">
   <div>
-    <h2 class="white center roboto w-100 tc f1-ns f2 lh3 pl3-l ph3 mw7">
+    <h2 class="white center roboto w-100 tc f1 lh3 pl3-l ph3 mw7">
       We can help you comply with the following standards, among others<br>
     </h2>
     <img
@@ -311,7 +319,7 @@
 <!-- Ebook section -->
 <div class="bg-ebook bg-banner-sz cover bg-center section-height justify-center items-center flex flex-wrap minh-100vh">
   <div>
-    <h2 class="white center roboto w-100 tc f1-ns f2 lh3 pl3-l ph3 mw7">
+    <h2 class="white center roboto w-100 tc f1 lh3 pl3-l ph3 mw7">
       Are you going fast in the wrong direction?<br>
     </h2>
     <h3 class="white center roboto w-100 tc f2-ns f3 pl3-l ph3 mw7">
@@ -328,12 +336,12 @@
 <div class="section-height justify-center items-center flex flex-wrap minh-100vh">
   <div class="overflow-hidden">
     <div class="tc mw7 center">
-      <h2 class="c-fluid-bk roboto tc f1-ns lh3 mv4">
+      <h2 class="c-fluid-bk roboto tc f1 lh3 mv4">
         Worldwide Hacking Experts
       </h2>
     </div>
     <div class="tc mw7 center pb4">
-      <p class="roboto c-fluid-bk fw1 f5 lh-2 mv4 ph5-l">
+      <p class="roboto c-fluid-bk fw1 f-key-features lh-2 mv4 ph5-l">
         Since 2001, <b class="fw7">Fluid Attacks</b> has been developing
         cybersecurity products and providing solutions for clients in
         industries like technology, banking, finance, healthcare, insurance,
@@ -347,9 +355,9 @@
   </div>
 </div>
 <div class="asap-bg bg-banner-sz cover bg-center section-height justify-center items-center flex flex-wrap">
-  <p class="white f2-ns f3 tc roboto b mv0">
+  <h2 class="white f1 tc roboto b mv0">
     We find all vulnerabilities and report them ASAP
-  </p>
+  </h2>
 
 </div>
 {% endblock content %}
