--- a/airs/theme/2020/templates/products/integrates.html
+++ b/airs/theme/2020/templates/products/integrates.html
@@ -137,26 +137,9 @@
 <h2 class="roboto c-fluid-bk f1 fw6 tc pt6">Key Benefits</h2>
 <div class="w-100 flex-l pv4">
   <div class="w-100">
-    <div class="w-50-l fl-l tl ph0-ns ph4" data-aos="fade-right">
+    <div class="w-50-l fl-l tl ph0-ns ph-body" data-aos="fade-right">
       <img
-      class="dn show-xl"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-screen-1-xl.png"
-      alt="Young hacker smiling">
-      <img
-      class="dn show-l"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-screen-1-l.png"
-      alt="Young hacker smiling">
-      <img
-      class="dn show-ml"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-screen-1-ml.png"
-      alt="Young hacker smiling">
-      <img
-      class="dn show-m"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-screen-1-m.png"
-      alt="Young hacker smiling">
-      <img
-      class="dn show-s"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-screen-1-s.png"
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-screen-1.png"
       alt="Young hacker smiling">
     </div>
     <div class="w-50-l fr-l ph-body">
@@ -201,26 +184,10 @@
 </div>
 <div class="w-100 flex pv4">
   <div class="w-100">
-    <div class="w-50-l fr-l tr ph0-ns ph4" data-aos="fade-left">
+    <div class="w-50-l fr-l tr ph0-ns ph-body" data-aos="fade-left">
       <img
-      class="dn show-xl fr"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-screen-2-xl.png"
-      alt="Young hacker smiling">
-      <img
-      class="dn show-l fr"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-screen-2-l.png"
-      alt="Young hacker smiling">
-      <img
-      class="dn show-ml fr"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-screen-2-ml.png"
-      alt="Young hacker smiling">
-      <img
-      class="dn show-m ml-auto"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-screen-2-m.png"
-      alt="Young hacker smiling">
-      <img
-      class="dn show-s"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-screen-2-s.png"
+      class="fr-l"
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-screen-2.png"
       alt="Young hacker smiling">
     </div>
     <div class="w-50-l fl-l ph-body">
