airs\refac(front): #3537 home fix phrase solutions
- The word 'Main' has been removed from the phrase for Solutions (Home).


Former-commit-id: f1f0768b6805b81fec55d1825a26e291b4ad1923

--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -252,7 +252,7 @@
   <div class="mw-1366 ph-body center pv0-l pv4">
     <div class="w-100 mw8 center">
       <h2 class="white tc roboto f1 fw7 mv3">
-        Multiple Solutions, One Main Service<br>
+        Multiple Solutions, One Service<br>
         Continuous Hacking
       </h2>
     </div>
