airs\feat(cross): #3431.1 add techniques pages
- Added content for SAST Technique
- Create template for Techniques


Former-commit-id: 0e8ddb0040018a0631a8ab33556188b9ff0e2a2f

--- a/airs/theme/2020/static/scss/base.scss
+++ b/airs/theme/2020/static/scss/base.scss
@@ -147,6 +147,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .security-bg { background-image: url('../../images/security/cover-security.png'); }
 .comparative-bg { background-image: url('../../images/services/comparative/cover-comparative.png'); }
 .asserts-bg { background-image: url('../../images/asserts/cover-asserts.png'); }
+.sast-bg { background-image: url('../../images/techniques/cover-sast.png'); }
 .bg-quotes { background-image: url('../../images/bg-quotes.png'); }
 .bg-solutions { background-image: url('../../images/bg-solutions.png'); }
 .bg-ebook { background-image: url('../../images/bg-ebook.png'); }
