airs\feat(cross): #3431.2 add techniques pages
- Added content for DAST, IAST, SCA, SRE


Former-commit-id: f612de0660deba4511b6f93ba3bd780f66d6dcc6

--- a/airs/theme/2020/static/scss/base.scss
+++ b/airs/theme/2020/static/scss/base.scss
@@ -148,6 +148,10 @@ $codeyellow: rgba(230, 219, 116, 1);
 .comparative-bg { background-image: url('../../images/services/comparative/cover-comparative.png'); }
 .asserts-bg { background-image: url('../../images/asserts/cover-asserts.png'); }
 .sast-bg { background-image: url('../../images/techniques/cover-sast.png'); }
+.dast-bg { background-image: url('../../images/techniques/cover-dast.png'); }
+.iast-bg { background-image: url('../../images/techniques/cover-iast.png'); }
+.sca-bg { background-image: url('../../images/techniques/cover-sca.png'); }
+.sre-bg { background-image: url('../../images/techniques/cover-sre.png'); }
 .bg-quotes { background-image: url('../../images/bg-quotes.png'); }
 .bg-solutions { background-image: url('../../images/bg-solutions.png'); }
 .bg-ebook { background-image: url('../../images/bg-ebook.png'); }
