airs\refac(cross): #3144.1 services pages
- Create template to generate services with the new design
- Changed content for One-shot Hacking to adapt the new design


Former-commit-id: ed44c04fe05d86e0311d716677173015da9e3247

--- a/airs/theme/2020/templates/services/one-shot.html
+++ b/airs/theme/2020/templates/services/one-shot.html
@@ -43,7 +43,7 @@
         </li>
         <li class="dib mt0">
           <a class="c-fluid-gray hover-white no-underline"
-             href="{{ SITEURL }}/services/continuous-hacking/">
+             href=".">
             Services
           </a>
           <span class="c-fluid-gray v-mid b"> / </span>
@@ -51,7 +51,7 @@
         <li class="dib mt0">
           <a class="white hover-white no-underline"
              href=".">
-            One Shot Hacking
+            {{ page.title }}
           </a>
         </li>
       </ul>
@@ -75,19 +75,21 @@
 {% endblock header %}
 
 {% block content %}
-<div class="tc pt5-l pt4">
-  <nav>
-    <a
-      class="c-fluid-gray f6 roboto no-underline fw3 hv-fluid-bk pointer link mr3"
-      href="{{ SITEURL }}/services/continuous-hacking/">
-      Continuous Hacking
-    </a>
-    <a
-      class="c-lightblack f6 roboto fw3 pointer no-underline bb"
-      href="{{ SITEURL }}/services/one-shot-hacking/">
-      One-Shot Hacking
-    </a>
-  </nav>
+<div class="tc pt3 flex nowrap items-center justify-center overflow-x-auto">
+  <ul class="pl0">
+    <li class="dib ph2">
+      <a href="{{ SITEURL }}/products/integrates/"
+         class="c-fluid-gray f4 roboto fw7 no-underline hv-fluid-bk">
+        Continuous Hacking
+      </a>
+    </li>
+    <li class="dib ph2 bb bc-hover-red bw2">
+      <a href="{{ SITEURL }}/products/skims/"
+      class="c-lightblack f4 roboto fw7 no-underline">
+        One-shot Hacking
+      </a>
+    </li>
+  </ul>
 </div>
 <div class="w-100 tc pv4 mv4">
   <img
@@ -95,94 +97,25 @@
     src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/service-one-shot.png"
     alt="Young hacker smiling">
 </div>
-<div class="services tc roboto w-100 center c-lightblack">
-  {{ page.content }}
-</div>
-<div class="mw-1366 ph-body center pb5">
-  <div class="carousel overflow-y-hidden overflow-x-auto w-auto pa2 nowrap pv5"
-       id="carousel">
-    <div class="item-carousel mh6 pr3 pa0 dib">
-      <a href="{{ SITEURL }}/services/one-shot-hacking/hacking-tech/">
-        <img
-          class="pt5"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/continuous/continuous-1.png"
-          alt="Young hacker smiling">
-      </a>
-    </div>
-    <div class="item-carousel mh6 pr3 pa0 dib">
-      <a href="{{ SITEURL }}/services/one-shot-hacking/environments/">
-        <img
-          class="pb5"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/continuous/continuous-3.png"
-          alt="Young hacker smiling">
-      </a>
-    </div>
-    <div class="item-carousel mh6 pr3 pa0 dib">
-      <a href="{{ SITEURL }}/services/one-shot-hacking/vuln-manage/">
-        <img
-          class="pt5"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/continuous/continuous-4.png"
-          alt="Young hacker smiling">
-      </a>
-    </div>
-    <div class="item-carousel mh6 pr3 pa0 dib">
-      <a href="{{ SITEURL }}/services/one-shot-hacking/coverage/">
-        <img
-          class="pb5"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/one-shot/one-shot-4.png"
-          alt="Young hacker smiling">
-      </a>
-    </div>
-    <div class="item-carousel mh6 pr3 pa0 dib">
-      <a href="{{ SITEURL }}/services/one-shot-hacking/infection/">
-        <img
-          class="pt5"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/one-shot/one-shot-5.png"
-          alt="Young hacker smiling">
-      </a>
-    </div>
-    <div class="item-carousel mh6 pr3 pa0 dib">
-      <a href="{{ SITEURL }}/services/one-shot-hacking/reports/">
-        <img
-          class="pb5"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/one-shot/one-shot-6.png"
-          alt="Young hacker smiling">
-      </a>
-    </div>
-    <div class="item-carousel ml6 pa0 dib">
-      <a href="{{ SITEURL }}/services/one-shot-hacking/critical-info/">
-        <img
-          class="pt5"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/continuous/continuous-7.png"
-          alt="Young hacker smiling">
-      </a>
-    </div>
+<div class="mw-1366 ph-body center roboto">
+  <div class="mw7 center roboto f3-l f4 fw3 lh-2 pv4">
+    {{ page.definition }}
   </div>
-  <div class="w5 h-cont-bar bg-fluid-lightgray center mw5 br4 ba bc-lightergray">
-    <div class="h-bar w1 bg-dk-red mw5 br4" id="progress-bar"></div>
-  </div>
-</div>
-<div class="pb5 db-ns dn">
-  <div>
-    <h2 class="f2-l fw1 tc-ns tl f3 w6-ns roboto center w-90">
-      Start your one-shot hacking project today
-    </h2>
-  </div>
-  <div class="tc">
-    <a class="roboto fw1 f5 no-underline c-fluid-bk hv-fluid-dkred"
-       href="{{ SITEURL }}/contact-us/">
-      <span class="br2 bannerbt hv-bt-fluid-rd bt-pd contact-pd bt-trans white b roboto pointer mt2">
-          Contact us now
-      </span>
+  <div class="center tc">
+    <a class="no-underline tc f3 menu-txt-trans roboto hv-fluid-rd "
+    href="{{ SITEURL }}/contact-us/">
+      <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv3 ph4 roboto fw7 f4 dib bt-trans br2 bc-fluid-red ba">
+        Make an inquiry
+      </button>
     </a>
   </div>
 </div>
-{% assets output="static/js/progressBar.min.js", "js/tmp/progressBar.min.js" %}
-<script type="text/javascript"
-        src="{{ SITEURL }}/{{ ASSET_URL }}"></script>
-{% endassets %}
-{% assets output="static/js/carousel.min.js", "js/tmp/carousel.min.js" %}
-<script type="text/javascript"
-        src="{{ SITEURL }}/{{ ASSET_URL }}"></script>
-{% endassets %}
+<div class="mw-1366 ph-body center roboto">
+  <div class="w-100 pv4">
+    <h2 class="c-fluid-bk fw7 f1 tc">Key Features</h2>
+    <div class="solution-benefits services-features justify-center items-center flex flex-wrap">
+      {{ page.content }}
+    </div>
+  </div>
+</div>
 {% endblock content %}
