--- a/airs/theme/2020/static/scss/base.scss
+++ b/airs/theme/2020/static/scss/base.scss
@@ -250,6 +250,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .w-footer-form { width: 18.75rem; }
 .sqr-card { min-height: 400px; width: 400px; }
 .w-benefit { width: 400px; }
+.services-features  { .sect2 { min-height: 720px !important; } }
 
 // Tachyons custom responsive classes
 @media screen and (min-width: 960px) and (max-width: 1199px) {
