airs\refac(cross): #3144.2 delete old content
- Delete old Service Features content


Former-commit-id: 4956e42e59d6cb0982ee9e00473b319538514524

--- a/airs/theme/2020/templates/services/one-shot.html
+++ b/airs/theme/2020/templates/services/one-shot.html
@@ -91,12 +91,6 @@
     </li>
   </ul>
 </div>
-<div class="w-100 tc pv4 mv4">
-  <img
-    class="h5"
-    src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/service-one-shot.png"
-    alt="Young hacker smiling">
-</div>
 <div class="mw-1366 ph-body center roboto">
   <div class="mw7 center roboto f3-l f4 fw3 lh-2 pv4">
     {{ page.definition }}
@@ -110,10 +104,16 @@
     </a>
   </div>
 </div>
+<div class="w-100 tc pv4 mv4">
+  <img
+    class="h5"
+    src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/service-one-shot.png"
+    alt="Young hacker smiling">
+</div>
 <div class="mw-1366 ph-body center roboto">
   <div class="w-100 pv4">
     <h2 class="c-fluid-bk fw7 f1 tc">Key Features</h2>
-    <div class="solution-benefits services-features justify-center items-center flex flex-wrap">
+    <div class="internal solution-benefits services-features justify-center items-center flex flex-wrap">
       {{ page.content }}
     </div>
   </div>
