--- a/airs/theme/2020/templates/services/one-shot.html
+++ b/airs/theme/2020/templates/services/one-shot.html
@@ -78,13 +78,13 @@
 <div class="tc pt3 flex nowrap items-center justify-center overflow-x-auto">
   <ul class="pl0">
     <li class="dib ph2">
-      <a href="{{ SITEURL }}/products/integrates/"
+      <a href="{{ SITEURL }}/services/continuous-hacking"
          class="c-fluid-gray f4 roboto fw7 no-underline hv-fluid-bk">
         Continuous Hacking
       </a>
     </li>
     <li class="dib ph2 bb bc-hover-red bw2">
-      <a href="{{ SITEURL }}/products/skims/"
+      <a href="."
       class="c-lightblack f4 roboto fw7 no-underline">
         One-shot Hacking
       </a>
