integrates\refac(front): #793.28 apitoken css
- Update apitokenmodal css


Former-commit-id: 4c4d055ae30db793c16516f93a6294c2d1d1a34a

--- a/integrates/front/src/styles/global.css
+++ b/integrates/front/src/styles/global.css
@@ -513,6 +513,10 @@ label {
   background-color: #EEEEEE !important;
 }
 
+:global .noresize {
+  resize: none;
+}
+
 :global .o-bd[disabled],
 :global .o-bd[disabled]:hover {
   opacity: 1;
