integrates\refac(front): #793.32 treatmentview css
- Update treatmentview css


Former-commit-id: 23f3cd27c0001cdeffc955656544d2dd669b9ec5

--- a/integrates/front/src/utils/forms/index.css
+++ b/integrates/front/src/utils/forms/index.css
@@ -94,6 +94,7 @@
 .formControl {
   display: block;
   width: 100% !important;
+  resize: none;
   height: 44px;
   padding: 10px 12px;
   font-size: 16px !important;
