--- a/airs/theme/2020/templates/footer.html
+++ b/airs/theme/2020/templates/footer.html
@@ -201,8 +201,7 @@
           <div>
           <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8"
                 method="POST"
-                onsubmit="return validateForm()"
-                class="mh3">
+                onsubmit="return validateForm()">
             <input type=hidden
                    name='captcha_settings'
                    value='{"keyname":"Fluidattacks","fallback":"true","orgId":"00D1I000001dGP6","ts":""}'>
@@ -350,8 +349,7 @@
                        name="00N1I00000O9iJ6"
                        wrap="soft"
                        class="dn h4 ml-auto mr-auto"
-                       placeholder="Message"></textarea><br>
-            <br>
+                       placeholder="Message"></textarea>
             <script src="https://www.google.com/recaptcha/api.js?hl=en"
                     async
                     defer>
@@ -362,7 +360,7 @@
             <div class="tc">
               <input type="submit"
                      name="submit"
-                     class="bn br2 bannerbt hv-bt-fluid-rd bt-pd contact-pd bt-trans white b roboto pointer"
+                     class="bn br2 bannerbt hv-bt-fluid-rd pv3 w-100 bt-trans white b roboto pointer"
                      value="Send your message"/>
             </div>
           </form>
