--- a/airs/theme/2020/static/scss/base.scss
+++ b/airs/theme/2020/static/scss/base.scss
@@ -152,6 +152,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .iast-bg { background-image: url('../../images/techniques/cover-iast.png'); }
 .sca-bg { background-image: url('../../images/techniques/cover-sca.png'); }
 .sre-bg { background-image: url('../../images/techniques/cover-sre.png'); }
+.clients-bg { background-image: url('../../images/about-us/clients/cover-clients.png'); }
 .bg-quotes { background-image: url('../../images/bg-quotes.png'); }
 .bg-solutions { background-image: url('../../images/bg-solutions.png'); }
 .bg-ebook { background-image: url('../../images/bg-ebook.png'); }
@@ -251,6 +252,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .sqr-card { min-height: 400px; width: 400px; }
 .w-benefit { width: 400px; }
 .services-features  { .sect2 { min-height: 720px !important; } }
+.mw-1200 { max-width: 1200px; }
 
 // Tachyons custom responsive classes
 @media screen and (min-width: 960px) and (max-width: 1199px) {
