airs\feat(cross): #3147.2 clients page
- Added filter menu for all clients categories


Former-commit-id: 07f142f88e0f8bac0865d95cd0fcc9ca557837cc

--- a/airs/theme/2020/static/scss/base.scss
+++ b/airs/theme/2020/static/scss/base.scss
@@ -474,6 +474,37 @@ $codeyellow: rgba(230, 219, 116, 1);
   @include menu-font;
 }
 
+#gall:checked~.tag-all {
+  @include menu-font;
+}
+#g1:checked~.tag-banking {
+  @include menu-font;
+}
+#g2:checked~.tag-oil-energy {
+  @include menu-font;
+}
+#g3:checked~.tag-automotive {
+  @include menu-font;
+}
+#g4:checked~.tag-ppharmaceuticals {
+  @include menu-font;
+}
+#g5:checked~.tag-healthcare {
+  @include menu-font;
+}
+#g6:checked~.tag-airlines {
+  @include menu-font;
+}
+#g7:checked~.tag-telecommunications {
+  @include menu-font;
+}
+#g8:checked~.tag-human-resources {
+  @include menu-font;
+}
+#g9:checked~.tag-technology {
+  @include menu-font;
+}
+
 .carousel.active {
   cursor: grabbing;
 }
